# Paptrion-messanger

./: README.md  push_git.bat  start_backend.bat  start_cloude.bat  start_server.bat
backend/: go.mod
backend/cloude_storage/: CMakeLists.txt  go.mod  go.sum
backend/cloude_storage/cmd/: main.go
backend/cloude_storage/config/: conf.yaml
backend/cloude_storage/internal/app/: app.go
backend/cloude_storage/internal/config/: config.go
backend/cloude_storage/pkg/domain/: errors.go  files.go  server.go
backend/cloude_storage/pkg/handler/: cloude.go  handler.go
backend/cloude_storage/pkg/repository/: repository.go
backend/cloude_storage/pkg/service/: service.go
backend/cloude_storage/src/: main.cpp
backend/cloude_storage/src/core/filesys/: filesys.cpp  filesys.h
backend/cloude_storage/src/core/handler/: handler.cpp  handler.h
backend/cloude_storage/src/core/logger/: logger.h
backend/cloude_storage/src/core/net/: net.h
backend/cloude_storage/src/core/net/request/: request.cpp  request.h
backend/cloude_storage/src/core/net/server/: server.cpp  server.h
backend/cloude_storage/src/core/service/: service.cpp  service.h
backend/server/: CMakeLists.txt  docker-compose.yaml  go.sum
backend/server/config/: conf.yaml
backend/server/internal/app/: app.go
backend/server/internal/config/: config.go
backend/server/internal/domain/: account.go  errors.go  server.go  user.go
backend/server/internal/handler/: authorization.go  chat.go  handler.go
backend/server/internal/repository/: repository.go
backend/server/internal/service/: service.go
backend/server/pkg/cloude/: cloude.go
backend/server/pkg/storage/: storage.go
backend/server/src/: main.cpp
backend/server/src/components/cloude/: cloude.cpp  cloude.h
backend/server/src/components/crypto/: md5.cpp  md5.h
backend/server/src/core/logger/: logger.h
backend/server/src/core/model/: model.h
backend/server/src/core/model/cloude/: cloude.h
backend/server/src/core/model/repository/: repository.h
backend/server/src/core/net/: net.h
backend/server/src/core/net/request/: request.cpp  request.h
backend/server/src/core/net/server/: server.cpp  server.h
backend/server/src/core/routs/: routs.cpp  routs.h
backend/server/src/core/routs/handlers/: handlers.h
backend/server/src/core/service/: model.h  service.h
backend/server/src/core/service/account/: account.cpp  account.h
client/: CMakeLists.txt
client/src/: include.h  main.cpp
client/src/api/: api.h  types.h
client/src/api/client/: client.cpp
client/src/api/client/user/: user.cpp
client/src/api/web/: web.cpp
client/src/components/fonts/: font.h
client/src/components/glad/include/glad/: gl.h  wgl.h
client/src/components/glad/src/: gl.c  wgl.c
client/src/components/imgui/: imgui_impl_glfw.cpp
client/src/net/: classes.h  net.h
client/src/net/http/: http_request.cpp
client/src/net/socket/: socket.cpp
client/src/ui/: ui.h
client/src/ui/classes/: classes.cpp  classes.h
client/src/ui/core/: core.h
client/src/ui/core/window/: window.cpp  window.h
client/src/ui/draw/components/: components.cpp
client/src/ui/gui/: gui.cpp
(+441 files in other folders)
